--- a/README
+++ b/README
@@ -1,2 +1,19 @@
+
+ForestClaw: see also http://www.forestclaw.org/
+
+ForestClaw is a parallel, multi-block adaptive finite volume code based on the
+wave propagation algorithms in ClawPack (R. J. LeVeque, Univ. of Washington),
+and the parallel, scalable octree infrastructure in p4est (Carsten Burstedde,
+Univ. of Bonn).
+
+A distinguishing feature of ForestClaw is the fact that the multi-resolution
+grid hierarchy is not stored as overlapping, nested grids as is conventionally
+done in block-structured Cartesian grid codes, but rather as a composite
+structure of non-overlapping fixed sized grids which are stored as leaves in a
+forest of quad- or octrees.  The basic adaptive algorithm that we use does not
+differ in any fundamental way from that proposed by Berger and Oliger (JCP,
+1984).
+
+ForestClaw is free software under a BSD-style license (see COPYING).
 The p4est library is released under the GPL 2.0 (or later).  As it is generally
-linked with the forestclaw code, all derived works will fall under GPL as well.
+linked with the forestclaw code, binary distribution falls under GPL as well.
