--- a/docs/parco13/ccgo.bib
+++ b/docs/parco13/ccgo.bib
@@ -9035,7 +9035,7 @@
 @ARTICLE{BergerGeorgeLeVequeEtAl11,
   author = {Marsha J. Berger and David L. George and Randall J. LeVeque and Kyle
 	T. Mandli},
-  title = {The GeoClaw software for depth-averaged flows with adaptive refinement},
+  title = {The {GeoClaw} software for depth-averaged flows with adaptive refinement},
   journal = {Advances in Water Resources},
   year = {2011},
   volume = {34},
@@ -11293,6 +11293,21 @@
   file = {Blatter95.pdf:Blatter95.pdf:PDF},
   owner = {ccgo},
   timestamp = {2012.03.27}
+}
+
+@ARTICLE{BlatterGreveAbeouchi10,
+  author = {Blatter, Heinz and Greve, Ralf and Abe-Ouchi, Ayako},
+  title = {A short history of the thermomechanical theory and modelling of glaciers
+	and ice sheets},
+  journal = {Journal of Glaciology},
+  year = {2010},
+  volume = {56},
+  pages = {1087--1094},
+  number = {200},
+  file = {BlatterGreveAbeouchi10.pdf:BlatterGreveAbeouchi10.pdf:PDF},
+  owner = {ccgo},
+  publisher = {International Glaciological Society},
+  timestamp = {2013.02.15}
 }
 
 @ARTICLE{BlazekStolkSymes12,
@@ -15078,6 +15093,17 @@
   timestamp = {2008.06.04}
 }
 
+@ARTICLE{Bui-ThanhDemkowiczGhattas11a,
+  author = {Tan Bui-Thanh and Leszek Demkowicz and Omar Ghattas},
+  title = {Constructively well-posed approximation method with unity inf-sup
+	and continuity constants for partial differential equations},
+  journal = {Mathematics Of Computation},
+  year = {2012},
+  note = {To appear},
+  owner = {ccgo},
+  timestamp = {2011.06.19}
+}
+
 @ARTICLE{Bui-ThanhDemkowiczGhattas11,
   author = {Tan Bui-Thanh and Leszek Demkowicz and Omar Ghattas},
   title = {A fast algorithm for inverse transport equation using a discontinuous
@@ -15086,17 +15112,6 @@
   year = {2011},
   owner = {ccgo},
   timestamp = {2011.04.05}
-}
-
-@ARTICLE{Bui-ThanhDemkowiczGhattas11a,
-  author = {Tan Bui-Thanh and Leszek Demkowicz and Omar Ghattas},
-  title = {Constructively well-posed approximation method with unity inf-sup
-	and continuity constants for partial differential equations},
-  journal = {Mathematics Of Computation},
-  year = {2011},
-  note = {To appear},
-  owner = {ccgo},
-  timestamp = {2011.06.19}
 }
 
 @ARTICLE{Bui-ThanhDemkowiczGhattas11b,
@@ -15202,6 +15217,16 @@
   year = {2012},
   owner = {ccgo},
   timestamp = {2010.12.22}
+}
+
+@ARTICLE{Bui-ThanhGhattas12g,
+  author = {Tan Bui-Thanh and Omar Ghattas},
+  title = {A scalable {MAP} solver for {B}ayesian inverse problems with {B}esov
+	priors},
+  journal = {Submitted to Inverse Problems and Imaging},
+  year = {2012},
+  owner = {ccgo},
+  timestamp = {2012.11.09}
 }
 
 @TECHREPORT{Bui-ThanhGhattasDemkowicz11,
@@ -23954,6 +23979,18 @@
   address = {Berlin},
   owner = {ccgo},
   timestamp = {2007.03.15}
+}
+
+@ARTICLE{DahmenHuangSchwabEtAl12,
+  author = {W. Dahmen and C. Huang and C. Schwab and G Welper},
+  title = {Adaptive {P}etrov-{G}alerkin methods for first order transport equations},
+  journal = {SIAM J. Numer. Anal.},
+  year = {2012},
+  volume = {50},
+  pages = {2420-2445},
+  number = {5},
+  owner = {ccgo},
+  timestamp = {2012.12.26}
 }
 
 @TECHREPORT{DahmenHuangSchwabEtAl11,
@@ -43880,6 +43917,18 @@
   author = {Heuveline, V. and Schieweck, F.}
 }
 
+@article{HeuvelineSchieweck2007,
+  title={On the inf-sup condition for higher order mixed fem on meshes with hanging nodes},
+  author={Heuveline, Vincent and Schieweck, Friedhelm},
+  journal={ESAIM: Mathematical Modelling and Numerical Analysis},
+  volume={41},
+  number={01},
+  pages={1--20},
+  year={2007},
+  publisher={Cambridge Univ Press}
+}
+
+
 @ARTICLE{HeywoodRannacherTurek96,
   author = {Heywood, John G. and Rannacher, Rolf and Turek, Stefan},
   title = {Artificial boundaries and flux and pressure conditions for the incompressible
@@ -55862,24 +55911,35 @@
   timestamp = {2007.03.15}
 }
 
-@BOOK{LeVeque02,
-  title = {{Finite Volume Methods for Hyperbolic Problems}},
-  publisher = {Cambridge University Press},
-  year = {2002},
-  author = {LeVeque, R.J.}
-}
-
 @ARTICLE{LevequeLi97,
   author = {Leveque, R.J. and Li, Zhilin},
-  title = {Immersed interface methods for Stokes flow with elastic boundaries
-	or surface tension },
+  title = {Immersed interface methods for {S}tokes flow with elastic boundaries
+	or surface tension},
   journal = {SIAM Journal on Scientific Computing},
   year = {1997},
   volume = {18},
-  pages = {709--35},
+  pages = {709-735},
   number = {3},
   owner = {ccgo},
   timestamp = {2007.04.25}
+}
+
+@BOOK{LeVeque02,
+  title = {Finite Volume Methods for Hyperbolic Problems},
+  publisher = {Cambridge University Press},
+  year = {2002},
+  author = {LeVeque, R. J.}
+}
+
+@ARTICLE{LeVeque97,
+  author = {R. J. LeVeque},
+  title = {Wave propagation algorithms for multi-dimensional hyperbolic systems},
+  journal = {Journal of Computational Physics},
+  year = {1997},
+  volume = {131},
+  pages = {327-353},
+  owner = {ccgo},
+  timestamp = {2013.02.26}
 }
 
 @BOOK{LeVeque92,
@@ -63248,6 +63308,19 @@
   publisher = {American Geophysical Union}
 }
 
+@ARTICLE{MoroNguyenPeraire12,
+  author = {D. Moro and N. C. Nguyen and J. Peraire},
+  title = {A hybridized discontinuous {P}etrov-{G}alerkin scheme for scalar
+	conservation laws},
+  journal = {International Journal for Numerical Methods Engineering},
+  year = {2012},
+  volume = {91},
+  pages = {950--970},
+  number = {9},
+  owner = {ccgo},
+  timestamp = {2013.01.27}
+}
+
 @INBOOK{MorseIngard68,
   pages = {400--405},
   title = {Theoretical Acoustics},
@@ -64440,15 +64513,6 @@
   pages = {323--344},
   owner = {ccgo},
   timestamp = {2007.04.25}
-}
-
-@ARTICLE{NateBui-ThanhDemkowicz12,
-  author = {Nate Roberts, Tan Bui-Thanh, and Leszek Demkowicz},
-  title = {The {DPG} Method for the {S}tokes Problem},
-  journal = {Submitted to Comput. Math. Appl.},
-  year = {2012},
-  note = {ICES Report ICES-12-22},
-  institution = {ICES}
 }
 
 @ARTICLE{Natterer77,
@@ -73061,6 +73125,15 @@
 @ARTICLE{NateDemkowicz12,
   author = {Nate Roberts and Tan Bui-Thanh and Leszek Demkowicz},
   title = {The DPG Method for the Stokes Problem},
+  journal = {Submitted to Comput. Math. Appl.},
+  year = {2012},
+  note = {ICES Report ICES-12-22},
+  institution = {ICES}
+}
+
+@ARTICLE{RobertsBui-ThanhDemkowicz12,
+  author = {Nate Roberts and Tan Bui-Thanh and Leszek Demkowicz},
+  title = {The {DPG} Method for the {S}tokes Problem},
   journal = {Submitted to Comput. Math. Appl.},
   year = {2012},
   note = {ICES Report ICES-12-22},
@@ -83565,6 +83638,18 @@
   number = {43-44},
   owner = {ccgo},
   timestamp = {2007.03.15}
+}
+
+@article{ToselliSchwab2003,
+  title={Mixed hp-finite element approximations on geometric edge and boundary
+    layer meshes in three dimensions},
+  author={Toselli, A. and Schwab, C.},
+  journal={Numerische Mathematik},
+  volume={94},
+  number={4},
+  pages={771--801},
+  year={2003},
+  publisher={Springer},
 }
 
 @ARTICLE{ToselliVasseur03,
