--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -109,7 +109,7 @@ scalability \cite{BursteddeWilcoxGhattas11}.  As an important extension, we go
 beyond the traditional high-order element and define each mesh element to be a
 dense compute patch with $m^d$ DOFs.  In fact, this approach resembles
 block-structured AMR \cite{ColellaGravesKeenEtAl07}
-% todo cite John B.\ Bell
+\todo{favorite BoxLib citation}
 except that the patches are not overlapping, which enables us to capitalize on
 our previous experience with scalable FE solvers for PDEs
 \cite{BursteddeStadlerAlisicEtAl13}.  A particular implementation of such a
