--- a/docs/parco13/abstract.tex
+++ b/docs/parco13/abstract.tex
@@ -26,15 +26,17 @@
 
 \newcommand{\todo}[1]{\textcolor{red}{[TODO: #1]}\xspace}
 \newcommand{\sR}{\mathbb{R}}
+\newcommand{\forestclaw}{Forestclaw\xspace}
+\newcommand{\pforest}{\texttt{p4est}\xspace}
 
 %%%%%%%%%%% End of definitions
 \begin{document}
 \begin{frontmatter}          % The preamble begins here.
 %
 %\pretitle{}
-\title{ForestClaw:
+\title{\forestclaw:
         Hybrid forest-of-octrees AMR for hyperbolic conservation laws}
-\runningtitle{ForestClaw}
+\runningtitle{\forestclaw}
 %\subtitle{}
 
 % Two or more authors:
@@ -64,7 +66,7 @@ conservation laws.  The key idea is to interpret each leaf of the AMR hierarchy
 as one uniform compute patch in $\sR^d$ of dimensions $m^d$, where $m$ is
 customarily between 8 and 32.  Thus, computation on each patch can be optimized
 for speed, while we inherit the flexibility of adaptive meshes.  In our work we
-choose to work with the p4est AMR library since it allows to compose the mesh
+choose to work with the \pforest AMR library since it allows to compose the mesh
 from multiple mapped octrees, thus enabling the cubed sphere and other
 nontrivial multiblock geometries.
 %
@@ -81,7 +83,7 @@ nontrivial multiblock geometries.
 
 %%%%%%%%%%% The article body starts:
 
-\section*{Introduction}
+\section{Introduction}
 
 With the advent of high-throughput coprocessors, such as GPGPUs or the MIC
 chip, comes the opportunity to sustain unprecedented rates of floating point
@@ -105,17 +107,19 @@ spectral element \cite{TufoFischer99}, finite volume
 
 To enable hardware acceleration for parallel dynamic AMR, we like to build upon
 the forest-of-octrees paradigm because of its low overhead and proven
-scalability \cite{BursteddeWilcoxGhattas11}.  As an important extension, we go
-beyond the traditional high-order element and define each mesh element to be a
+scalability \cite{BursteddeWilcoxGhattas11}.  This approach identifies each
+octree leaf with a mesh element.  In this work, we go
+beyond the traditional high-order element and define each element to be a
 dense compute patch with $m^d$ DOFs.  In fact, this approach resembles
 block-structured AMR \cite{ColellaGravesKeenEtAl07}
 \todo{favorite BoxLib citation}
 except that the patches are not overlapping, which enables us to capitalize on
 our previous experience with scalable FE solvers for PDEs
-\cite{BursteddeStadlerAlisicEtAl13}.  A particular implementation of such a
-patch is available with the Clawpack software \cite{LeVeque97} that has been
-designed to solve hyperbolic conservation laws on a uniform compute patch and
-successfully used in the context of block-structured AMR \todo{AMRClaw
+\cite{BursteddeStadlerAlisicEtAl13}.  The Clawpack software \cite{LeVeque97}
+provides a popular implementation of such a patch.  It has
+been designed to solve hyperbolic conservation laws
+% on a uniform compute patch
+and successfully used in the context of block-structured AMR \todo{AMRClaw
 citation}.
 
 In this paper we describe how we design the coupling of forest-of-octree AMR
@@ -124,73 +128,74 @@ enabling efficient parallelism and multiblock geometries and close with a range
 of numerical examples that demonstrate the conceptual improvements in relation
 to other approaches.
 
-\section*{Design principles}
+\section{Design principles}
 
-The starting point of our work is defined by the p4est algorithms for
+The starting point of our work is defined by the \pforest algorithms for
 forest-of-octrees AMR on the one hand, and the Clawpack algorithms for the
 numerical solution of hyperbolic conservation laws
 % on uniformly gridded domains
 on the other.  Both are specialized codes with the following characteristics:
 \begin{center}
 \begin{tabular}{l|l|l}
-& \multicolumn{1}{c|}{\texttt{p4est}} & \multicolumn{1}{c}{Clawpack} \\
+& \multicolumn{1}{c|}{\pforest} & \multicolumn{1}{c}{Clawpack} \\
 \hline
 subject & hexahedral nonconforming mesh &  hyperbolic PDE on $[0, 1]^d$ \\
 structure & forest of octrees & patch of $m^d$ DOFs \\
 atomic unit & octree leaf & one DOF \\
-parallelization & MPI & threads \\
+parallelization & MPI & threads (Manyclaw variant) \\
 memory access & distributed & shared \\
 data type & integers & floating point values \\
 language & C & Fortran 77 \\
 dependencies & none & Python \\
-\hline
+%\hline
 \end{tabular}
 \end{center}
 The proposed 1:1 correspondence between a leaf and a patch thus combines two
-hithertwo disjoint models in a modular way that permits the reuse of existing,
-verified and performant codes if the integration is done well.  The resulting
-parallel programming model is a hybrid and often referred to as MPI+X.
+hithertwo disjoint models in a modular way:
+\begin{enumerate}
+\item We permit the reuse of existing, verified and performant codes.
+% if the integration is done well
+\item We preserve the separation of the mesh on one hand from the
+discretization and solvers on the other.
+\item The AMR metadata (24 bytes per leaf) is insignificant compared to
+the numerical data ($m^d$ floating point values per patch).
+\item The resulting parallel programming model is a hybrid and often referred
+to as MPI+X.
+\end{enumerate}
 
-Multiblock handling
-generic transformations
-yields periodicity as a special case
+% yields periodicity as a special case
+A particular feature of \forestclaw is that the generic handling of multiblock
+geometries is inherited from \pforest, identifying each octree as a block, and
+each leaf as a patch.  Each block is understood as a reference unit cube with
+its own geometric mapping.  The connectivity of the blocks is static and can be
+created by external hexahedral mesh generators, elimintating the need to encode
+it by hand.
 
-Identification: an octree is a block, and a leaf is a patch.
+A main challenge is presented by the fact that the patch neighborhood is only
+known to the mesh backend, from which it needs to be propagated to the
+numerical code in \forestclaw that implements the interaction with ghost
+patches.  To this end, we define an interface that allows distributed read-only
+access to the sequence of blocks, the list of patches for each, and a lookup of
+neighbor patches (and their relative orientation which is nontrivial between
+blocks).  The exchange of ghost data and parallel partitioning is provided
+transparently by the backend.  Mesh modification directives, such as local
+refinement and coarsening, are called from \forestclaw and relayed to the mesh
+backend.
 
-Each block is understood as a reference unit cube with an optional per-block
-geometric mapping.  The coordinate system of 
+% AMR Metadata $\ll$ numerical data
 
+% Experience from integration with large-scale adaptive-mesh PDE solvers.
+% Design goals: Lightweight, modular, reuse.
 
-Information provided by the mesh:
-Sequence of blocks, list of patches for each.  Each patch
-has a list of neighbor patches including information on 
+% Mesh information is discrete (tree nodes have integer coordinates in
+% $(0, 2^L($ where $L$ is the maximum allowed refinement level of the tree.
 
+% Dimension independence
 
-AMR Metadata $\ll$ numerical data
+% rank as is common with parallelization using the MPI framework
+% \cite{Forum94, SnirOttoHuss-LedermanEtAl96}.
 
-
-Experience from integration with large-scale adaptive-mesh PDE solvers.
-Design goals: Lightweight, modular, reuse.
-
-Separation of mesh on the one hand from discretization and solvers on the other.
-
-Mesh information is discrete (tree nodes have integer coordinates in
-$(0, 2^L($ where $L$ is the maximum allowed refinement level of the tree.
-
-sorted ordering of tree nodes, lookup tables, .
-
-Dimension independence
-
-
-rank as is common with parallelization using the MPI framework
-%\cite{Forum94, SnirOttoHuss-LedermanEtAl96}.
-
-Challenge: patch neighborhood information is known to the mesh backend
-but needs to be used to handle ghost information.
-
-
-
-\section*{Hybrid forest-of-octrees AMR}
+\section{Parallelization}
 
 
 $z$-order
@@ -223,21 +228,21 @@ geometric adaptive multigrid \cite{SundarBirosBursteddeEtAl12}
 \todo{What is BearClaw (tree-based / S.\ Mitran)?}
 
 
-\section*{Patch-based numerics at the leaf level}
+\section{Patch-based numerics at the leaf level}
 
 
 Patch: contains the local coordinates and copies of neighboring ghost degrees
 of freedom.  The layer of ghost copies is usually 2 points deep.
 
 
-\section*{Numerical results}
+\section{Numerical results}
 
 
 
 \section*{Acknowledgements}
 
 The authors acknowledge valuable discussion with Randy LeVeque, Marsha Berger,
-and Hans-Petter Langtangen.  The leaf/grid paradigm was independently presented
+and Hans-Petter Langtangen.  The leaf/patch paradigm was independently presented
 by B.\ as part of a talk at the SCI Institute, Utah, in July 2011.
 
 
